--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <div class="fixed py-2 px-8 bottom-8 bg-soft rounded-lg">
+      hi boii
+    </div> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
