Features & Readme added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <div class="fixed py-2 px-8 bottom-8 bg-soft rounded-lg">
-      hi boii
-    </div>
+    <div id="toast" class="toast fixed py-2 px-10 rounded-lg"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="./src/Components/toast.js"></script>
   </body>
 </html>
